# Meta-project

./: .dockerignore  .gitattributes  Dockerfile  ENV.md  JUDGES.md  MORNING_CHECKLIST.md  PAPER.md  README.md  SAFEGUARDS.md  SOCIAL.md  SUBMISSION.md  VIDEO_SCRIPT.md  __init__.py  app.py  blog_post.md  client.py  demo.py  eval_baseline.py  inference.py  metacognitive_reward.py  models.py  morning_run.sh  openenv.yaml  pyproject.toml  requirements.txt  ship.sh  train_colab.ipynb  train_grpo.py  train_grpo_colab.ipynb  train_notebook.py  train_pytorch_agent.py  train_sft_warmup.py
code_review_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
code_review_env/data/: code_snippets.json
code_review_env/server/: environment.py
data/: code_snippets.json  cve_training_data.json  red_team_results.json  sft_demonstrations.json
grpo_output/: ablation_results.json
scripts/: build_improvement_panel.py  generate_final_curves.py  generate_sft_data.py  generate_thinking_viz.py  generate_transfer_snippets.py  red_team.py  run_ablations.py  run_transfer_inference.py
server/: app.py  environment.py
tests/: test_metacognitive_reward.py
